feat(organization): add person position assignments
